--- a/config/database.yml
+++ b/config/database.yml
@@ -4,22 +4,35 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: mysql
+  encoding: utf8
+  reconnect: false
+  database: sugarmint
   pool: 5
-  timeout: 5000
+  username: sugar
+  password: sugarchallenged
+  host: localhost
+  port: 3306
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: mysql
+  encoding: utf8
+  reconnect: false
+  database: sugarmint
   pool: 5
-  timeout: 5000
+  username: sugar
+  password: sugarchallenged
+  host: localhost
+  port: 3306
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: mysql
+  encoding: utf8
+  reconnect: false
+  database: sugarmint_prod
   pool: 5
-  timeout: 5000
+  username: sugar
+  password: sugarchallenged
+  host: localhost
+  port: 3306
+
