--- a/config/database.yml
+++ b/config/database.yml
@@ -26,13 +26,5 @@ test:
   port: 3306
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: <%= ENV["SUGAR_DB"] %>
-  pool: 5
-  username: <%= ENV["SUGAR_DB_USER"] %>
-  password: <%= ENV["SUGAR_DB_PASSWORD"] %>
-  host: localhost
-  port: 3306
+  adapter: pg
 
